<resources>
    <string name="app_name">QR &amp; BAR Code Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="scan_bar_code">Scan Bar Code</string>
    <string name="generate_qr_code">Create QR Code</string>
    <string name="generate_bar_code">Create Bar Code</string>
    <string name="history">History</string>
    <string name="settings">settings</string>
    <string name="results">Results</string>
    <string name="cancel">cancel</string>
    <string name="content_type">Content Type</string>
    <string name="create">Create</string>
    <string name="select_content_type">Select Content Type</string>
    <string name="copy_to_clip_board">copy to clip board</string>
    <string name="free_text">Text</string>
    <string name="free_text_hint">Enter text</string>
    <string name="url">URL</string>
    <string name="url_hint">Enter URL</string>
    <string name="visiting_card">Visiting Card</string>
    <string name="email">Email</string>
    <string name="images">Images</string>
    <string name="invitation">Invitation</string>
    <string-array name="content_type_array">
        <item>@string/free_text</item>
        <item>@string/url</item>
        <item>@string/images</item>
        <item>@string/visiting_card</item>
        <item>@string/invitation</item>
    </string-array>
    <string name="invalid_text">Invalid Text</string>
    <string name="copied_text_to_clip_board">Copied text to clip board</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="failed_to_encode_text">Failed to encode text</string>
    <string name="request_camera_permission">Cannot scan without camera permission. Please enable permission from App settings</string>
</resources>

