<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rakesh.mobile.qrreader.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <Button
            android:id="@+id/bt_scan_qr_code"
            style="@style/TextViewLargeBold"
            android:layout_width="match_parent"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/scan_qr_code" />

        <Button
            android:id="@+id/bt_scan_bar_code"
            style="@style/TextViewLargeBold"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/scan_bar_code" />

        <Button
            android:id="@+id/bt_generate_qr_code"
            style="@style/TextViewLargeBold"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/generate_qr_code" />

        <Button
            android:id="@+id/bt_generate_bar_code"
            style="@style/TextViewLargeBold"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/generate_bar_code" />

        <Button
            android:id="@+id/bt_history"
            style="@style/TextViewLargeBold"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/history" />
    </LinearLayout>
</ScrollView>

