<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        style="@style/TextViewLarge"
        android:text="@string/select_content_type"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@android:color/holo_blue_light"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray" />

    <RadioButton
        android:id="@+id/rb_free_text"
        style="@style/TextViewMedium"
        android:layout_width="match_parent"
        android:text="@string/free_text"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="left|center_vertical"
        android:layoutDirection="rtl"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray" />

    <RadioButton
        android:id="@+id/rb_url"
        style="@style/TextViewMedium"
        android:layout_width="match_parent"
        android:text="@string/url"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="left|center_vertical"
        android:layoutDirection="rtl"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray" />

    <RadioButton
        android:id="@+id/rb_images"
        style="@style/TextViewMedium"
        android:layout_width="match_parent"
        android:text="@string/images"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="left|center_vertical"
        android:layoutDirection="rtl"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray" />

    <RadioButton
        android:id="@+id/rb_visiting_card"
        style="@style/TextViewMedium"
        android:layout_width="match_parent"
        android:text="@string/visiting_card"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="left|center_vertical"
        android:layoutDirection="rtl"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray" />
    <RadioButton
        android:id="@+id/rb_invitation"
        style="@style/TextViewMedium"
        android:layout_width="match_parent"
        android:text="@string/invitation"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="left|center_vertical"
        android:layoutDirection="rtl"/>

</LinearLayout>