<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_background">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >
        <EditText
            android:id="@+id/et_content_type"
            android:layout_width="match_parent"
            style="@style/TextViewLarge"
            android:hint="@string/content_type"
            android:editable="false"
            android:padding="4dp"
            android:drawableRight="@drawable/icon_drop_down_white"
            />

    </android.support.design.widget.TextInputLayout>

    <EditText
        android:id="@+id/et_content_value"
        android:layout_width="match_parent"
        style="@style/TextViewMedium"
        android:hint="@string/free_text_hint"
        android:textColorHint="@android:color/darker_gray"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="4dp"
        android:lines="5"
        android:gravity="start"
        android:background="@android:color/white"
        android:textColor="@android:color/black"/>
    <Button
        android:id="@+id/bt_create"
        style="@style/TextViewLarge"
        android:layout_width="match_parent"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/create"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>
    <RelativeLayout
        android:id="@+id/rl_image_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_generated_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
        <ImageView
            android:id="@+id/iv_share"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@+id/iv_generated_code"
            android:layout_toRightOf="@+id/iv_generated_code"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:visibility="gone"
            android:src="@drawable/icon_share"/>
    </RelativeLayout>
</LinearLayout>